Adds triangles to popover cards

--- a/docs/components/popovers.html
+++ b/docs/components/popovers.html
@@ -240,12 +240,77 @@
                   </div>
                 </div>
               </div>
+              <div class="column col-3 col-sm-6">
+                <div class="popover popover-top-right"><a class="btn btn-primary" href="#popovers">top right popover</a>
+                  <div class="popover-container">
+                    <div class="card">
+                      <div class="card-header">
+                        <div class="card-title h5">Apple</div>
+                        <div class="card-subtitle text-gray">Software and hardware</div>
+                      </div>
+                      <div class="card-body">To make a contribution to the world by making tools for the mind that advance humankind.</div>
+                      <div class="card-footer">
+                        <button class="btn btn-primary">Buy</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column col-3 col-sm-6">
+                <div class="popover popover-bottom-right"><a class="btn btn-primary" href="#popovers">bottom right popover</a>
+                  <div class="popover-container">
+                    <div class="card">
+                      <div class="card-header">
+                        <div class="card-title h5">Apple</div>
+                        <div class="card-subtitle text-gray">Software and hardware</div>
+                      </div>
+                      <div class="card-body">To make a contribution to the world by making tools for the mind that advance humankind.</div>
+                      <div class="card-footer">
+                        <button class="btn btn-primary">Buy</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column col-3 col-sm-6">
+                <div class="popover popover-bottom-left"><a class="btn btn-primary" href="#popovers">bottom left popover</a>
+                  <div class="popover-container">
+                    <div class="card">
+                      <div class="card-header">
+                        <div class="card-title h5">Apple</div>
+                        <div class="card-subtitle text-gray">Software and hardware</div>
+                      </div>
+                      <div class="card-body">To make a contribution to the world by making tools for the mind that advance humankind.</div>
+                      <div class="card-footer">
+                        <button class="btn btn-primary">Buy</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="column col-3 col-sm-6">
+                <div class="popover popover-top-left"><a class="btn btn-primary" href="#popovers">top left popover</a>
+                  <div class="popover-container">
+                    <div class="card">
+                      <div class="card-header">
+                        <div class="card-title h5">Apple</div>
+                        <div class="card-subtitle text-gray">Software and hardware</div>
+                      </div>
+                      <div class="card-body">To make a contribution to the world by making tools for the mind that advance humankind.</div>
+                      <div class="card-footer">
+                        <button class="btn btn-primary">Buy</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
             <p>Wrap an element by a container with the <code>popover</code> class.
               And add a container with the <code>popover-container</code> next to the element.
               You can use <a href="#cards">Cards</a> component inside the <code>popover-container</code>.
             </p>
-            <p>Also, you can add the <code>popover-right</code>, <code>popover-bottom</code> or <code>popover-left</code> class to define the position.
+            <p>Also, you can add the <code>popover-right</code>, <code>popover-bottom</code>, <code>popover-left</code>, <code>popover-top-left</code>,
+              <code>popover-bottom-left</code>, <code>popover-bottom-right</code> or <code>popover-top-right</code> class to define the position.
               By default, the popovers appear above the element.
             </p>
             <pre class="code" data-lang="HTML"><code><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"popover popover-right"</span>&gt;</span>
