--- a/docs/src/components/popovers.pug
+++ b/docs/src/components/popovers.pug
@@ -6,6 +6,16 @@ block variables
   - var title = 'Popovers - Components - ridestyler.ui CSS Framework'
   - var description = 'Popovers are small overlay content containers. Popovers component is built entirely in CSS. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.'
 
+mixin popover-content
+  .card
+    .card-header
+      .card-title.h5 Apple
+      .card-subtitle.text-gray Software and hardware
+    .card-body
+      | To make a contribution to the world by making tools for the mind that advance humankind.
+    .card-footer
+      button.btn.btn-primary Buy
+
 block docs-content
   +docs-heading('popovers', 'Popovers')
 
@@ -17,60 +27,57 @@ block docs-content
           a.btn.btn-primary(href="#popovers")
             | top popover
           .popover-container
-            .card
-              .card-header
-                .card-title.h5 Apple
-                .card-subtitle.text-gray Software and hardware
-              .card-body
-                | To make a contribution to the world by making tools for the mind that advance humankind.
-              .card-footer
-                button.btn.btn-primary Buy
+            +popover-content
       .column.col-3.col-sm-6
         .popover.popover-right
           a.btn.btn-primary(href="#popovers")
             | right popover
           .popover-container
-            .card
-              .card-header
-                .card-title.h5 Apple
-                .card-subtitle.text-gray Software and hardware
-              .card-body
-                | To make a contribution to the world by making tools for the mind that advance humankind.
-              .card-footer
-                button.btn.btn-primary Buy
+            +popover-content
       .column.col-3.col-sm-6
         .popover.popover-bottom
           a.btn.btn-primary(href="#popovers")
             | bottom popover
           .popover-container
-            .card
-              .card-header
-                .card-title.h5 Apple
-                .card-subtitle.text-gray Software and hardware
-              .card-body
-                | To make a contribution to the world by making tools for the mind that advance humankind.
-              .card-footer
-                button.btn.btn-primary Buy
+            +popover-content
       .column.col-3.col-sm-6
         .popover.popover-left
           a.btn.btn-primary(href="#popovers")
             | left popover
           .popover-container
-            .card
-              .card-header
-                .card-title.h5 Apple
-                .card-subtitle.text-gray Software and hardware
-              .card-body
-                | To make a contribution to the world by making tools for the mind that advance humankind.
-              .card-footer
-                button.btn.btn-primary Buy
+            +popover-content
+      .column.col-3.col-sm-6
+        .popover.popover-top-right
+          a.btn.btn-primary(href="#popovers")
+            | top right popover
+          .popover-container
+            +popover-content
+      .column.col-3.col-sm-6
+        .popover.popover-bottom-right
+          a.btn.btn-primary(href="#popovers")
+            | bottom right popover
+          .popover-container
+            +popover-content
+      .column.col-3.col-sm-6
+        .popover.popover-bottom-left
+          a.btn.btn-primary(href="#popovers")
+            | bottom left popover
+          .popover-container
+            +popover-content
+      .column.col-3.col-sm-6
+        .popover.popover-top-left
+          a.btn.btn-primary(href="#popovers")
+            | top left popover
+          .popover-container
+            +popover-content
 
     p
       | Wrap an element by a container with the #[code popover] class.
       | And add a container with the #[code popover-container] next to the element.
       | You can use #[a(href="#cards") Cards] component inside the #[code popover-container].
     p
-      | Also, you can add the #[code popover-right], #[code popover-bottom] or #[code popover-left] class to define the position.
+      | Also, you can add the #[code popover-right], #[code popover-bottom], #[code popover-left], #[code popover-top-left],
+      | #[code popover-bottom-left], #[code popover-bottom-right] or #[code popover-top-right] class to define the position.
       | By default, the popovers appear above the element.
       
     pre.code(data-lang='HTML')
