--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 /*! ridestyler.ui v#{$version} */
 @import "fonts";
-@import "icons";
+@import "_icons.scss";
 
 // Reset and dependencies
 @import "normalize";
