--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -32,6 +32,7 @@ block content
             {url: 'installation', name: 'Installation'},
             {url: 'custom', name: 'Custom version'},
             {url: 'browsers', name: 'Browser support'},
+            {url: 'javascript', name: 'Javascript'},
             {url: 'whatsnew', name: 'What\'s new'}
           )
           +docs-accordion(
