--- a/docs/src/_layout/_layout.pug
+++ b/docs/src/_layout/_layout.pug
@@ -33,13 +33,17 @@ html(lang='en')
       link(rel='shortcut icon' href='../img/favicons/favicon.ico')
       link(rel='icon' href='../img/favicons/favicon.png')
       link(rel='stylesheet' href='../dist/rsui.min.css')
-      link(rel='stylesheet' href='../dist/docs.min.css') 
+      link(rel='stylesheet' href='../dist/docs.min.css')
     else 
       link(rel='shortcut icon' href='img/favicons/favicon.ico')
       link(rel='icon' href='img/favicons/favicon.png')
       link(rel='stylesheet' href='dist/rsui.min.css')
       link(rel='stylesheet' href='dist/docs.min.css')
-    link(rel='canonical' href= url)
+      link(rel='canonical' href= url)
 
   body
     block content
+    script(src='https://cdn.jsdelivr.net/npm/vue@2.6.11' type="text/javascript")
+    script(src='../dist/components/rsui.umd.js' type="text/javascript")
+    
+block scripts
