--- a/docs/src/getting-started/installation.pug
+++ b/docs/src/getting-started/installation.pug
@@ -55,6 +55,15 @@ block docs-content
         :highlight(lang="html")
           <link rel="stylesheet" href="https://static.ridestyler.net/rs-ui/latest/rsui-icons.min.css">
 
+    p
+      | Or you can load our custom components from the CDN:
+
+    //- install from CDN
+    pre.code(data-lang='HTML')
+      code
+        :highlight(lang="html")
+          <script type="text/javascript" src="https://static.ridestyler.net/rs-ui/latest/components/rsui.umd.js">
+
     +docs-subheading('install-npm', 'Install with NPM')
 
     //- install with npm
