Updated import link

--- a/docs/src/getting-started/javascript.pug
+++ b/docs/src/getting-started/javascript.pug
@@ -61,7 +61,7 @@ block docs-content
     pre.code(data-lang="HTML")
       code
         :highlight(lang="Javascript")
-            @import "ridestyler.ui/src/components/BrandedNavbarMenu";
+            import "ridestyler.ui/src/components/BrandedNavbarMenu";
 
     p
       | Now that we have a reference to vue and our components we can go ahead and initialize our component with Vue.
